# distributedKVStore

./: .gitignore  CMakeLists.txt  README.md  build.sh  networkManager.h  network_log.txt  runServerClient.sh  runTestNetwork.sh
docs/: network.md
examples/: client.cpp  server.cpp
includes/: bufferQueue.h  config.h  logger.h  messages.h  network.cpp  network.h  raft.h  serialize.h  server.h  utils.h
src/: server.cpp
test/: testNetwork.cpp  testSerialize.cpp
